create github pages

--- a/page.html
+++ b/page.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content4 cid-rJcO0PzlUt" id="content4-s">
+<section class="engine"><a href="https://mobirise.info/f">easy website builder</a></section><section class="mbr-section content4 cid-rJcO0PzlUt" id="content4-s">
 
     
 
@@ -104,20 +104,6 @@
             <div><iframe class="mbr-embedded-video" src="https://player.vimeo.com/video/377761008?autoplay=1&amp;loop=1" width="800" height="600" frameborder="0" allowfullscreen></iframe></div>
         </div>
     </figure>
-</section>
-
-<section class="mbr-section content8 cid-rKUsLq1dFN" id="content8-3h">
-
-    
-
-    <div class="container">
-        <div class="media-container-row title">
-            <div class="col-12 col-md-8">
-                <div class="mbr-section-btn align-center"><a class="btn btn-black-outline display-4" href="https://mobirise.co"><div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/377761008?autoplay=1&amp;loop=1&amp;title=0&amp;byline=0&amp;portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen=""></iframe></div><script src="https://player.vimeo.com/api/player.js"></script></a>
-                    <a class="btn btn-black-outline display-4" href="https://mobirise.co"><div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/377761008?autoplay=1&amp;loop=1&amp;title=0&amp;byline=0&amp;portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen=""></iframe></div><script src="https://player.vimeo.com/api/player.js"></script></a></div>
-            </div>
-        </div>
-    </div>
 </section>
 
 <section once="footers" class="cid-rKUig1oEIN" id="footer7-34">
