--- a/page2.html
+++ b/page2.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section class="mbr-section content5 cid-rJin851dK8" id="content5-z">
+<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><section class="mbr-section content5 cid-rJin851dK8" id="content5-z">
 
     
 
@@ -175,20 +175,6 @@
             <div><iframe class="mbr-embedded-video" src="https://player.vimeo.com/video/379987169?autoplay=1&amp;loop=1" width="800" height="600" frameborder="0" allowfullscreen></iframe></div>
         </div>
     </figure>
-</section>
-
-<section class="mbr-section content8 cid-rKZKnzjzgD" id="content8-3u">
-
-    
-
-    <div class="container">
-        <div class="media-container-row title">
-            <div class="col-12 col-md-8">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://mobirise.co"><div style="padding:97.56% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/379987169?autoplay=1&amp;loop=1&amp;color=000000&amp;title=0&amp;byline=0&amp;portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen=""></iframe></div><script src="https://player.vimeo.com/api/player.js"></script></a>
-                    <a class="btn btn-black-outline display-4" href="https://mobirise.co"><div style="padding:97.56% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/379987169?autoplay=1&amp;loop=1&amp;color=000000&amp;title=0&amp;byline=0&amp;portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen=""></iframe></div><script src="https://player.vimeo.com/api/player.js"></script></a></div>
-            </div>
-        </div>
-    </div>
 </section>
 
 <section class="mbr-section article content14 cid-rJioaXVcAR" id="content14-17">
